--- a/index.htm
+++ b/index.htm
@@ -523,8 +523,8 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                 </div>
 
                 <div class="menu-wrapper"><nav class="main-nav"><ul id="menu-mainmenu" class="menu"><li id="menu-item-351" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-14 current_page_item menu-item-351"><a href="" aria-current="page">Home</a></li>
-<li id="menu-item-39" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-39"><a href="portfolio.html">Portfolio</a></li>
-<li id="menu-item-186" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-186"><a href="contact.html">Contact</a></li>
+<li id="menu-item-39" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-39"><a href="portfolio/">Portfolio</a></li>
+<li id="menu-item-186" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-186"><a href="contact/">Contact</a></li>
 </ul></nav></div>            </nav>
 
             <!-- Banner -->
