Attach script to convert domain

--- a/project/caro-online.htm
+++ b/project/caro-online.htm
@@ -620,7 +620,9 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 hljs.highlightAll();
 /* ]]> */
 </script>
-
+<!-- Scripts -->
+<script src="js/config.js"></script>
+<script src="js/app.js"></script>
 
 
 </body></html>
