--- a/project/galix-city.htm
+++ b/project/galix-city.htm
@@ -612,6 +612,8 @@ hljs.highlightAll();
 /* ]]> */
 </script>
 
-
+<!-- Scripts -->
+<script src="js/config.js"></script>
+<script src="js/app.js"></script>
 
 </body></html>
