--- a/contact/index.htm
+++ b/contact/index.htm
@@ -643,5 +643,8 @@ hljs.highlightAll();
 /* ]]> */
 </script>
 
+<!-- Scripts -->
+<script src="js/config.js"></script>
+<script src="js/app.js"></script>
 
 </body></html>
