--- a/portfolio/index.htm
+++ b/portfolio/index.htm
@@ -714,5 +714,9 @@ hljs.highlightAll();
 /* ]]> */
 </script>
 
+<!-- Scripts -->
+<script src="js/config.js"></script>
+<script src="js/app.js"></script>
+
 
 </body></html>
