--- a/project/dragon-adventure.html
+++ b/project/dragon-adventure.html
@@ -1101,4 +1101,9 @@ hljs.highlightAll();
               </div>
     </div>
 
-  </div></body></html>
+  </div>
+
+<!-- Scripts -->
+<script src="js/config.js"></script>
+<script src="js/app.js"></script>
+</body></html>
