--- a/project/priate-legends.htm
+++ b/project/priate-legends.htm
@@ -1218,6 +1218,8 @@ hljs.highlightAll();
 /* ]]> */
 </script>
 
-
+<!-- Scripts -->
+<script src="js/config.js"></script>
+<script src="js/app.js"></script>
 
 </body></html>
