--- a/project/sieu-anh-hung-dai-chien.htm
+++ b/project/sieu-anh-hung-dai-chien.htm
@@ -614,5 +614,7 @@ hljs.highlightAll();
 </script>
 
 
-
+<!-- Scripts -->
+<script src="js/config.js"></script>
+<script src="js/app.js"></script>
 </body></html>
