--- a/project/tile-connect.htm
+++ b/project/tile-connect.htm
@@ -751,6 +751,8 @@ hljs.highlightAll();
 /* ]]> */
 </script>
 
-
+<!-- Scripts -->
+<script src="js/config.js"></script>
+<script src="js/app.js"></script>
 
 </body></html>
