--- a/portfolio/index.htm
+++ b/portfolio/index.htm
@@ -566,9 +566,10 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
         </div>
         </article></div></div><div class="project-row"><div class="project-year"><h2 class="project-year-label">2022</h2></div><div class="project-details"><article class="project-item">        <div class="project-layout">
             <div class="project-teaser-trailer">
-                                    <div class="video-wrapper">
-                                            </div>
-                            </div>
+				<div class="video-wrapper">
+					<iframe title="Dragon Adventure showcase" width="500" height="281" src="https://www.youtube.com/embed/LTUfjGfQbLE?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe>
+				</div>
+			</div>
 
             <div class="project-info">
                 <h3 class="project-title-highlight project-title">
