Add full embed youtube video for others

--- a/portfolio/index.htm
+++ b/portfolio/index.htm
@@ -549,7 +549,8 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
         <div class="projects-container"><div class="project-row"><div class="project-year"><h2 class="project-year-label">2021</h2></div><div class="project-details"><article class="project-item">        <div class="project-layout">
             <div class="project-teaser-trailer">
                                     <div class="video-wrapper">
-                                            </div>
+										<iframe title="Dragon Adventure showcase" width="500" height="281" src="https://www.youtube.com/embed/LTUfjGfQbLE?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe>
+                                    </div>
                             </div>
 
             <div class="project-info">
@@ -567,7 +568,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
         </article></div></div><div class="project-row"><div class="project-year"><h2 class="project-year-label">2022</h2></div><div class="project-details"><article class="project-item">        <div class="project-layout">
             <div class="project-teaser-trailer">
 				<div class="video-wrapper">
-					<iframe title="Dragon Adventure showcase" width="500" height="281" src="https://www.youtube.com/embed/LTUfjGfQbLE?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe>
+					<iframe title="Tile Connect" width="500" height="375" src="./portfolio_files/pZ_rWn1RLt0.html" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe>
 				</div>
 			</div>
 
@@ -586,7 +587,8 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
         </article><article class="project-item">        <div class="project-layout">
             <div class="project-teaser-trailer">
                                     <div class="video-wrapper">
-                                            </div>
+										<iframe title="OPG: Pirates Legend Gameplay Android / iOS" width="500" height="281" src="./portfolio_files/JyKG30qOrb0.html" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe>
+                                    </div>
                             </div>
 
             <div class="project-info">
@@ -604,7 +606,8 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
         </article><article class="project-item">        <div class="project-layout">
             <div class="project-teaser-trailer">
                                     <div class="video-wrapper">
-                                            </div>
+										<iframe title="GaliXCity - Hướng dẫn nâng cấp lực chiến tối ưu nhất | How to increase power" width="500" height="281" src="./portfolio_files/uGAbCJzeQy0.html" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe>
+									</div>
                             </div>
 
             <div class="project-info">
@@ -622,7 +625,8 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
         </article></div></div><div class="project-row"><div class="project-year"><h2 class="project-year-label">2023</h2></div><div class="project-details"><article class="project-item">        <div class="project-layout">
             <div class="project-teaser-trailer">
                                     <div class="video-wrapper">
-                                            </div>
+										<iframe title="Survival Game [Team M08]" width="500" height="281" src="./portfolio_files/c6tcFYWbYeY.html" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe>
+									</div>
                             </div>
 
             <div class="project-info">
@@ -639,8 +643,8 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
         </div>
         </article><article class="project-item">        <div class="project-layout">
             <div class="project-teaser-trailer">
-                                    <div class="video-wrapper">
-                        <iframe title="Siêu Anh Hùng Đại Chiến #2 - ĐUA TOP NGÀY 1, GACHA TRÊN TAY CỤ NHẤT YORIICHI TEST TỶ LỆ CHO AE" width="500" height="281" src="./index_files/SRSDJc5kTUI.html" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe>                    </div>
+                            <div class="video-wrapper">
+									<iframe title="Siêu Anh Hùng Đại Chiến #2 - ĐUA TOP NGÀY 1, GACHA TRÊN TAY CỤ NHẤT YORIICHI TEST TỶ LỆ CHO AE" width="500" height="281" src="./portfolio_files/SRSDJc5kTUI.html" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe>
                             </div>
 
             <div class="project-info">
