--- a/portfolio/index.htm
+++ b/portfolio/index.htm
@@ -594,7 +594,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             <div class="project-info">
                 <h3 class="project-title-highlight project-title">
                     <a href="https://huyhoangcqt.github.io/SamuelNguyenPortfolio/project/pirate-legends/">
-                        Priate Legends                    </a>
+                        Pirate Legends                    </a>
                 </h3>
                 <p><strong>Project Length:</strong> 3 Months</p>
                                     <p><strong>Project Type:</strong> Team - <strong>Size:</strong> 7</p>
