--- a/project/dragon-adventure/index.html
+++ b/project/dragon-adventure/index.html
@@ -573,7 +573,10 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
     <p class="project-start-date"><strong>Start:</strong> October 15, 2021</p>        <p class="project-platforms"><strong>Platforms:</strong> Android, IOS, Linux</p>
     <div class="project-layout">
         <div class="project-teaser-trailer">
-            <div class="media-wrapper"><iframe title="Dragon Adventure showcase" width="500" height="281" src="./dragon-adventure_files/LTUfjGfQbLE.html" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe></div>        </div>
+            <div class="media-wrapper">
+				<iframe title="Dragon Adventure showcase" width="500" height="281" src="https://www.youtube.com/embed/LTUfjGfQbLE?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe>
+			</div>
+		</div>
 
         <div class="project-info">
             <h3>Project Info</h3>
@@ -638,7 +641,10 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                 </div>
                 URP and Lighting            </div>
             <div class="item-collapse-details">
-                <div class="demo-video-wrapper demo-video-url-wrapper"><iframe title="Dragon Adventure Lighting" width="786" height="442" src="./dragon-adventure_files/8T83RW5HSvY.html" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe></div>            </div>
+                <div class="demo-video-wrapper demo-video-url-wrapper">
+					<iframe title="Dragon Adventure Lighting" width="786" height="442" src="https://www.youtube.com/embed/8T83RW5HSvY?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe>
+				</div>
+			</div>
         </div>
                 <div class="collapse-group">
             <div class="item-collapse-label">
@@ -648,7 +654,10 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                 </div>
                 Animations            </div>
             <div class="item-collapse-details">
-                <div class="demo-video-wrapper demo-video-url-wrapper"><iframe title="Dragon Adventure Animation" width="786" height="442" src="./dragon-adventure_files/dfmmnNx937Q.html" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe></div><p></p><h3>Description:</h3> The 2D character is divided into several parts: Head (Horns, Eyes, Tongue, Upper Jaw, Lower Jaw), Wings, Legs, Arms, Body, and Tail.
+                <div class="demo-video-wrapper demo-video-url-wrapper">
+					<iframe title="Dragon Adventure Animation" width="786" height="442" src="https://www.youtube.com/embed/dfmmnNx937Q?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe>
+				</div>
+			</div>
 Animations are structured into 3 layers: Eye, Head, and Body.
 
 <ul> 
@@ -668,7 +677,10 @@ allowing for condition-based management and smooth transitions between animation
                 </div>
                 Parallax Background            </div>
             <div class="item-collapse-details">
-                <div class="demo-video-wrapper demo-video-url-wrapper"><iframe title="Dragon Adventure ParallaxBG" width="786" height="442" src="./dragon-adventure_files/Aczh2WpVMFo.html" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe></div>        <div class="collapse-group">
+                <div class="demo-video-wrapper demo-video-url-wrapper">
+					<iframe title="Dragon Adventure ParallaxBG" width="786" height="442" src="https://www.youtube.com/embed/Aczh2WpVMFo?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe>
+				</div>
+			</div>
             <div class="item-collapse-label">
                 <div class="collapse-icons">
                     <span class="collapse-icon collapse-icon-up"></span>
@@ -703,7 +715,10 @@ creating a sense of depth in the game.</p>            </div>
                 </div>
                 Sprite Shape            </div>
             <div class="item-collapse-details">
-                <div class="demo-video-wrapper demo-video-url-wrapper"><iframe title="Dragon Adventure Sprite Shape" width="786" height="442" src="./dragon-adventure_files/rc9NqojMAMk.html" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe></div><p></p><h3>Description:</h3> <p>I’m using Sprite Shape for the ground and upper boundary due to its smooth curvature. </p>
+                <div class="demo-video-wrapper demo-video-url-wrapper">
+					<iframe title="Dragon Adventure Sprite Shape" width="786" height="442" src="https://www.youtube.com/embed/rc9NqojMAMk?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe>
+				</div>
+			</div>
 <p>For performance optimization, I use a single continuous Sprite Shape for the ground and another for the upper edge. I minimize the number of spline points, mark the objects as static, and disable collider updates.</p><p></p>            </div>
         </div>
                 <div class="collapse-group">
@@ -846,7 +861,10 @@ creating a sense of depth in the game.</p>            </div>
                 </div>
                 Particle System            </div>
             <div class="item-collapse-details">
-                <div class="demo-video-wrapper demo-video-url-wrapper"><iframe title="Dragon Adventure Particle System" width="786" height="442" src="./dragon-adventure_files/NNpSr7xc2P4.html" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe></div><p></p><h3>Description:</h3> <p>While experimenting with visual effects for my game, I took time to explore Unity’s Particle System.</p>
+                <div class="demo-video-wrapper demo-video-url-wrapper">
+					<iframe title="Dragon Adventure Particle System" width="786" height="442" src="https://www.youtube.com/embed/NNpSr7xc2P4?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe>
+				</div>
+			</div>
 <p>I learned how various parameters influence the behavior of particles—such as their direction, shape, speed, color, brightness, and form. This helped me understand how to fine-tune effects for different gameplay scenarios.</p><p></p>            </div>
         </div>
         </div>    
