--- a/project/galix-city/index.htm
+++ b/project/galix-city/index.htm
@@ -546,7 +546,10 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
     <p class="project-start-date"><strong>Start:</strong> October 10, 2022</p>    <p class="project-release-date"><strong>Release:</strong> December 31, 2022</p>    <p class="project-platforms"><strong>Platforms:</strong> Android, IOS</p>
     <div class="project-layout">
         <div class="project-teaser-trailer">
-            <div class="media-wrapper"><iframe title="GaliXCity - Hướng dẫn nâng cấp lực chiến tối ưu nhất | How to increase power" width="500" height="281" src="./galix-city_files/uGAbCJzeQy0.html" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe></div>        </div>
+            <div class="media-wrapper">
+				<iframe title="GaliXCity - Hướng dẫn nâng cấp lực chiến tối ưu nhất | How to increase power" width="500" height="281" src="https://www.youtube.com/embed/uGAbCJzeQy0?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe>
+			</div>
+		</div>
 
         <div class="project-info">
             <h3>Project Info</h3>
