--- a/project/tile-connect/index.htm
+++ b/project/tile-connect/index.htm
@@ -546,7 +546,10 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
     <p class="project-start-date"><strong>Start:</strong> March 3, 2022</p>        <p class="project-platforms"><strong>Platforms:</strong> Android, IOS</p>
     <div class="project-layout">
         <div class="project-teaser-trailer">
-            <div class="media-wrapper"><iframe title="Tile Connect" width="500" height="375" src="./tile-connect_files/pZ_rWn1RLt0.html" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe></div>        </div>
+            <div class="media-wrapper">
+				<iframe title="Tile Connect" width="500" height="375" src="https://www.youtube.com/embed/pZ_rWn1RLt0?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe>
+			</div>
+		</div>
 
         <div class="project-info">
             <h3>Project Info</h3>
