--- a/project/sieu-anh-hung-dai-chien/index.htm
+++ b/project/sieu-anh-hung-dai-chien/index.htm
@@ -546,7 +546,10 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
     <p class="project-start-date"><strong>Start:</strong> March 9, 2023</p>    <p class="project-release-date"><strong>Release:</strong> March 20, 2024</p>    <p class="project-platforms"><strong>Platforms:</strong> Android, IOS</p>
     <div class="project-layout">
         <div class="project-teaser-trailer">
-            <div class="media-wrapper"><iframe title="Siêu Anh Hùng Đại Chiến #2 - ĐUA TOP NGÀY 1, GACHA TRÊN TAY CỤ NHẤT YORIICHI TEST TỶ LỆ CHO AE" width="500" height="281" src="./sieu-anh-hung-dai-chien_files/SRSDJc5kTUI.html" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe></div>        </div>
+            <div class="media-wrapper">
+				<iframe title="Siêu Anh Hùng Đại Chiến #2 - ĐUA TOP NGÀY 1, GACHA TRÊN TAY CỤ NHẤT YORIICHI TEST TỶ LỆ CHO AE" width="500" height="281" src="https://www.youtube.com/embed/SRSDJc5kTUI?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe>
+			</div>
+		</div>
 
         <div class="project-info">
             <h3>Project Info</h3>
