--- a/project/survival-game/index.htm
+++ b/project/survival-game/index.htm
@@ -546,7 +546,10 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
     <p class="project-start-date"><strong>Start:</strong> January 2, 2023</p>        <p class="project-platforms"><strong>Platforms:</strong> Android, IOS</p>
     <div class="project-layout">
         <div class="project-teaser-trailer">
-            <div class="media-wrapper"><iframe title="Survival Game [Team M08]" width="500" height="281" src="./survival-game_files/c6tcFYWbYeY.html" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe></div>        </div>
+            <div class="media-wrapper">
+				<iframe title="Survival Game [Team M08]" width="500" height="281" src="https://www.youtube.com/embed/c6tcFYWbYeY?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe>
+			</div>
+		</div>
 
         <div class="project-info">
             <h3>Project Info</h3>
